--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <section class="section">
     <h2>🤖 Try the DadGPT Assistant</h2>
     <p>Ask questions, get dad hacks, name ideas, nursery budgeting tips, and more — powered by smart AI tuned for modern fatherhood.</p>
-    <a href="#" class="cta-button">Launch DadGPT</a>
+    <iframe src="https://www.chatbase.co/chatbot-iframe/your-chatbot-id" width="100%" height="600px" frameborder="0"></iframe>
   </section>
 
   <section class="section">
@@ -110,5 +110,25 @@
   <footer>
     &copy; 2025 DadMode.AI – Built for Dads by a Dad-to-Be
   </footer>
+
+  <!-- Chatbase Floating Chatbot Script -->
+  <script>
+  (function(){
+    if(!window.chatbase||window.chatbase("getState")!=="initialized"){
+      window.chatbase=(...arguments)=>{
+        if(!window.chatbase.q){window.chatbase.q=[]}
+        window.chatbase.q.push(arguments)};
+      window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})
+    }
+    const onLoad=function(){
+      const script=document.createElement("script");
+      script.src="https://www.chatbase.co/embed.min.js";
+      script.id="XxFpiTrQnfTJBUODTfWA6";
+      script.domain="www.chatbase.co";
+      document.body.appendChild(script)
+    };
+    if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}
+  })();
+  </script>
 </body>
 </html>
