--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <section class="section">
     <h2>🤖 Try the DadGPT Assistant</h2>
     <p>Ask questions, get dad hacks, name ideas, nursery budgeting tips, and more — powered by smart AI tuned for modern fatherhood.</p>
-    <iframe src="https://www.chatbase.co/chatbot-iframe/XxFpiTrQnfTJBUODTfWA6" width="100%" height="600px" frameborder="0"></iframe>
+    <a href="#" class="cta-button" onclick="window.ChatbaseAPI && window.ChatbaseAPI.toggle(); return false;">Ask DadGPT</a>
   </section>
 
   <section class="section">
@@ -125,6 +125,7 @@
       script.src="https://www.chatbase.co/embed.min.js";
       script.id="XxFpiTrQnfTJBUODTfWA6";
       script.domain="www.chatbase.co";
+      script.setAttribute("defer", "true");
       document.body.appendChild(script)
     };
     if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}
