--- a/index.html
+++ b/index.html
@@ -98,9 +98,17 @@
 
   <section class="section">
     <h2>📦 Digital Tools & Kits</h2>
-    <p>Download powerful digital tools to help you plan, prepare, and parent like a boss – from budget templates to survival calendars.</p>
-    <a href="#" class="cta-button">View Digital Products</a>
-  </section>
+    <p>Plan like a pro. Parent like a champ. These essential digital downloads make fatherhood easier from Day 1.</p>
+
+    <ul style="list-style: none; padding-left: 0;">
+      <li>📝 <strong>Dad-to-Be Checklist</strong> – What to do (and what to skip) before baby arrives</li>
+      <li>📊 <strong>Baby Budget Tracker</strong> – Stay on top of expenses with this editable planner</li>
+      <li>📅 <strong>30-Day Newborn Survival Calendar</strong> – What to expect and prep daily</li>
+      <li>🧠 <strong>Dad Hacks PDF</strong> – Swaddling, feeding, soothing — simplified</li>
+    </ul>
+
+    <a href="https://yourstore.com/products" class="cta-button" target="_blank">View All Digital Products</a>
+</section>
 
   <section class="section">
     <h2>👕 DadMode Merch</h2>
